me da error en la consola

--- a/peges/comprar_tickets.html
+++ b/peges/comprar_tickets.html
@@ -147,7 +147,7 @@
              
          </footer>   
      
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="../css/bootstrap.min.css"></script>
     <script src="../js/main.js"></script>
     </body> 
     </html>
