--- a/peges/comprar_tickets.html
+++ b/peges/comprar_tickets.html
@@ -112,20 +112,21 @@
                     <option value="0">Sin categoria</option>
                     <option value="1">Estudiante</option>
                     <option value="2">Trainee</option>
-                    <option value="3">Junio</option>
+                    <option value="3">Junior</option>
                   </select>
                 </div>
-                <div class="row g-4">
+                
                 <div class="alert alert-primary mt-2 mb-4" role="alert"> 
                     Total a pagar:$ <span id="totalPago" class="aling-middle"></span>
-                </div></div>
-                <div class="col-12">
-                    <button type="reset" class="btn btn-lg btn-form" id="btnBorrar">Borrar</button>
-                    
                 </div>
-                <div class="col-12">
-                    <button class="btn btn-primary" type="button" id="btnResumen">Resumen</button>
+                <div class="row gx-2">
+                    <div class=" col-md mb-3">
+                    <button type="reset" class=" w-100 btn btn-lg  btn-success btn-form " id="btnBorrar">Borrar</button>
+                    </div>
+                    <div class="col-md mb-3">
+                    <button type="button" class=" w-100 btn btn-lg btn-success btn-form "  id="btnResumen">Resumen</button>
                   </div>
+                </div>  
             </form>
             </div>
         </section>
