--- a/peges/comprar_tickets.html
+++ b/peges/comprar_tickets.html
@@ -86,7 +86,7 @@
 
         <section class=" formulario container">
             <p class="text-center">INICIAR COMPRA </p>
-            <h3 class="text-center">ENTRADA GENERAL</h3>
+            <h3 class="text-center">ENTRADA GENERAL $200</h3>
 
             <div class="d-flex flex-wrap container " >
                 <form class="row g-4" action="">
